# informath

./: .gitignore  Makefile  README.md  cabal.project  informath.cabal
app/: RunInformath.hs
grammars/: BaseConstants.gf  BaseConstantsEng.gf  BaseConstantsSwe.gf  Informath.gf  InformathFunctor.gf  InformathGer.gf  InformathSwe.gf  MathCoreGer.gf  MathCoreSwe.gf  Terms.gf  UserConstantsSwe.gf  UtilitiesGer.gf  UtilitiesSwe.gf
grammars/extraction/: MathWordsSwe.gf
grammars/mathterms/: DerivedTermsEng.gf  DerivedTermsFre.gf  DerivedTermsGer.gf  MathTerms.gf  MathTermsEng.gf  MathTermsGer.gf
src/: BaseConstants.agda  BaseConstants.dk  CheckAgdaSyntax.hs  CommonConcepts.hs  ConstantData.hs  Core2Dedukti.hs  Core2Informath.hs  Dedukti2Agda.hs  Dedukti2Coq.hs  Dedukti2Core.hs  Dedukti2Lean.hs  Dedukti2Rocq.hs  DeduktiOperations.hs  Environment.hs  Informath2Core.hs  Makefile  MkConstants.hs  Ranking.hs  RunInformath.hs  SpecialDeduktiConversions.hs  added_constants.dkgf  base_constant_data.dkgf  constant_data.dkgf  constant_data.txt
src/grammars/: BaseConstants.gf  BaseConstantsEng.gf  BaseConstantsFre.gf  BaseConstantsGer.gf  BaseConstantsLatex.gf  BaseConstantsSwe.gf  Informath.gf  InformathEng.gf  InformathFre.gf  InformathFunctor.gf  InformathGer.gf  InformathSwe.gf  MathCore.gf  MathCoreEng.gf  MathCoreFre.gf  MathCoreFunctor.gf  MathCoreGer.gf  MathCoreSwe.gf  Terms.gf  TermsLatex.gf  UserConstants.gf  UserConstantsEng.gf  UserConstantsFre.gf  UserConstantsGer.gf  UserConstantsSwe.gf  UtilitiesEng.gf  UtilitiesFre.gf  UtilitiesSwe.gf
test/: mma.dk  top100.dk
(+28 files in other folders)
